feat: use docker-compose for containerized deployment

--- a/server/conf/app.ini
+++ b/server/conf/app.ini
@@ -18,8 +18,9 @@ TimeFormat = 20060102
 Type = postgres
 User = postgres
 Password = root
-Host = localhost
+# Host = localhost
+Host = pgsql-mt
 Port = 5432
-Name = login
+Name = mt-db
 TimeZone = Australia/Melbourne
 DataPath = ../data/
