--- a/react-ts/.env.production
+++ b/react-ts/.env.production
@@ -2,4 +2,4 @@
 NODE_ENV = "production"
 
 # 线上环境接口地址
-VITE_API_URL = "https://mock.mengxuegu.com/mock/62abda3212c1416424630a45"
+VITE_APP_BASE_URL = 'http://backend-mt:8000'
