feat: add the configuration of database to specify the node environment

--- a/server/conf/app.ini
+++ b/server/conf/app.ini
@@ -18,8 +18,8 @@ TimeFormat = 20060102
 Type = postgres
 User = postgres
 Password = root
-# Host = localhost
-Host = pgsql-mt
+DevHost = localhost
+ProdHost = pgsql-mt
 Port = 5432
 Name = mt-db
 TimeZone = Australia/Melbourne
